agregamos el wasap al boton del video

--- a/pinyin.html
+++ b/pinyin.html
@@ -1952,7 +1952,7 @@ What We Offer -->
     </div>
     
     <!-- Botón sobre el video -->
-    <a href="#contact" class="video-info-btn">Para más información</a>
+    <a href="https://wa.me/50766821821"  class="video-info-btn">Para más información</a>
 </section>
 
 <script>
