Arreglamos el link pdf

--- a/pinyin.html
+++ b/pinyin.html
@@ -1545,7 +1545,7 @@ header {
         <div id="pinyin_chart">
         <h2 id="chart_title">Tabla de Pinyin Mandarín con Audio</h2>
         <h2 id="chart_title2">Selecciona una sílaba para escuchar el audio y practicar con la grabación.
-        <a id="chart_title2" href="https://jpageprojects.github.io/MandarinAudio/c:\Users\ivang\Downloads\TabladePinyinAcademiaMandarinGoo.pdf" style="color: #0645ad; text-decoration: none;"> Presionar aquí<a> para ver el PDF del cuadro</h2>
+        <a id="chart_title2" href="https://jpageprojects.github.io/MandarinAudio/TabladePinyinAcademiaMandarinGoo.pdf" style="color: #0645ad; text-decoration: none;"> Presionar aquí<a> para ver el PDF del cuadro</h2>
         <div id="chart_controls">
             <label>Al hacer clic:
                 <select class="click_rule" id="clickRule">
