cambios en ref botn

--- a/pinyin.html
+++ b/pinyin.html
@@ -2322,8 +2322,8 @@ document.addEventListener('DOMContentLoaded', function() {
     </p>
     <div style="margin: 20px 0;">
       <a href="#" style="color: #007bff; text-decoration: none; margin: 0 15px; font-size: 14px;">Inicio</a>
-      <a href="#" style="color: #007bff; text-decoration: none; margin: 0 15px; font-size: 14px;">Tabla Pinyin</a>
-      <a href="#" style="color: #007bff; text-decoration: none; margin: 0 15px; font-size: 14px;">Contacto</a>
+      <a href="#chart_title" style="color: #007bff; text-decoration: none; margin: 0 15px; font-size: 14px;">Tabla Pinyin</a>
+      <a href="#contact" style="color: #007bff; text-decoration: none; margin: 0 15px; font-size: 14px;">Contacto</a>
     </div>
     <p style="margin: 15px 0 0 0; color: #333; font-size: 16px;">
       Hecho con ❤️ para estudiantes de chino mandarin
