cambios en ref botn

--- a/pinyin.html
+++ b/pinyin.html
@@ -1614,9 +1614,9 @@ header {
        
 
         <ul class="nav-links">
-            <li><a href="#curso">Nuestro Curso</a></li>
-            <li><a href="#nosotros">Sobre Nosotros</a></li>
-            <li><a href="#contacto">Contáctanos</a></li>
+            <li><a href="#ourcurso-video-section">Nuestro Curso</a></li>
+            <li><a href="#ourcurso-video-section">Sobre Nosotros</a></li>
+            <li><a href="#contact">Contáctanos</a></li>
         </ul>
     </div>
 </nav>
