--- a/pinyin.html
+++ b/pinyin.html
@@ -1557,7 +1557,7 @@ header {
             <div class="header-content">
                 <div class="logo">
                     <a href="#">
-                        <img src="https://jpageprojects.github.io/MandarinAudio/logoPinyin.png"  alt="Logo de Mandarin Pinyin">
+                        <img src="https://mandaringoo.github.io/MandarinAudio/logoPinyin.png"  alt="Logo de Mandarin Pinyin">
                     </a>
                 </div>
                 <div class="titulo-header">
@@ -1661,7 +1661,7 @@ header {
         <div id="pinyin_chart">
         <h2 id="chart_title">Tabla de Pinyin Mandarín con Audio</h2>
         <h2 id="chart_title2">Selecciona una sílaba para escuchar el audio y practicar con la grabación.
-        <a href="https://jpageprojects.github.io/MandarinAudio/TabladePinyinAcademiaMandarinGoo.pdf" style="color: #0645ad; text-decoration: none;"> Presionar aquí</a> para ver el PDF del cuadro</h2>
+        <a href="https://mandaringoo.github.io/MandarinAudio/TabladePinyinAcademiaMandarinGoo.pdf" style="color: #0645ad; text-decoration: none;"> Presionar aquí</a> para ver el PDF del cuadro</h2>
         <div id="chart_controls">
             <label>Al hacer clic:
                 <select class="click_rule" id="clickRule">
@@ -1799,7 +1799,7 @@ header {
     </div>
 
     <script>
-        const audioBasePath = 'https://jpageprojects.github.io/MandarinAudio/audios1/';
+        const audioBasePath = 'https://mandaringoo.github.io/MandarinAudio/audios1/';
         const sndPlayer = document.getElementById('snd_player');
         const clickRuleSelect = document.getElementById('clickRule');
 
@@ -1996,7 +1996,7 @@ header {
         playsinline
         preload="metadata"
         style="display: block; width: 50%;">
-        <source src="https://jpageprojects.github.io/MandarinAudio/maumau.mp4" type="video/mp4">
+        <source src="https://mandaringoo.github.io/MandarinAudio/maumau.mp4" type="video/mp4">
         Tu navegador no soporta la reproducción de videos.
     </video>
 </div>
@@ -2074,7 +2074,7 @@ What We Offer -->
         </div>
 
         <div class="testimonial-image">
-            <img src="https://jpageprojects.github.io/MandarinAudio/ourstudent.jpeg" alt="Estudiante practicando">
+            <img src="https://mandaringoo.github.io/MandarinAudio/ourstudent.jpeg" alt="Estudiante practicando">
         </div>
 
     </div>
@@ -2091,7 +2091,7 @@ What We Offer -->
             playsinline
             preload="metadata"
             style="display: block; width: 100%;">
-            <source src="https://jpageprojects.github.io/MandarinAudio/mision4.mp4" type="video/mp4">
+            <source src="https://mandaringoo.github.io/MandarinAudio/mision4.mp4" type="video/mp4">
             Tu navegador no soporta la reproducción de videos.
         </video>
     </div>
@@ -2107,7 +2107,7 @@ What We Offer -->
             playsinline
             preload="metadata"
             style="display: block; width: 100%;">
-            <source src="https://jpageprojects.github.io/MandarinAudio/ourcurso2.mp4" type="video/mp4">
+            <source src="https://mandaringoo.github.io/MandarinAudio/ourcurso2.mp4" type="video/mp4">
             Tu navegador no soporta la reproducción de videos.
         </video>
     </div>
@@ -2194,7 +2194,7 @@ document.addEventListener('DOMContentLoaded', function() {
         
         <div style="display: flex; align-items: center; justify-content: center; gap: 15px;">
             <div class="logo">
-                <img src="https://jpageprojects.github.io/MandarinAudio/logoPinyin.png" 
+                <img src="https://mandaringoo.github.io/MandarinAudio/logoPinyin.png" 
                      alt="Logo de Mandarin Pinyin" 
                      style="height: 50px; width: auto; display: block;">
             </div> 
