--- a/pinyin.html
+++ b/pinyin.html
@@ -1996,7 +1996,7 @@ header {
         playsinline
         preload="metadata"
         style="display: block; width: 50%;">
-        <source src="https://mandaringoo.github.io/MandarinAudio/maumau.mp4" type="video/mp4">
+        <source src="https://mandaringoo.github.io/MandarinAudio/maumau.mov" type="video/quicktime">
         Tu navegador no soporta la reproducción de videos.
     </video>
 </div>
