nuevos estilos en el nav y organizacion del info

--- a/pinyin.html
+++ b/pinyin.html
@@ -1298,8 +1298,8 @@ header {
     }
 /* --- Navegación Principal (SIEMPRE visible en PC) --- */
 .main-nav {
-    background: #ffffff;
-    border-bottom: 1px solid #eeeeee;
+    background: #4390e7;
+    border-bottom: 1px solid #4390e7;
     padding: 2px 0;
     position: sticky;
     top: 0;
@@ -1314,7 +1314,7 @@ header {
     left: 0;
     right: 0;
     height: 3px;
-    background-color: #96c7ff;
+    background-color: #ffffff;
 }
 
 .nav-container {
@@ -1335,7 +1335,7 @@ header {
 
 .main-nav .nav-links a {
     text-decoration: none;
-    color: #666;
+    color: #000000;
     font-size: 13px;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -1346,7 +1346,7 @@ header {
 }
 
 .main-nav .nav-links a:hover {
-    color: #2e79ce;
+    color: #ffffff;
     transform: translateY(-2px);
 }
 
@@ -1972,22 +1972,7 @@ header {
     <section style="background: var(--color-bg);">
     <!-- Additional Information -->
     <div class="pinyin-info">
-        <div class="info-card">
-            <h3>¿Qué es el pinyin y por qué es tan importante aprenderlo primero?</h3>
-            <p>El pinyin es el sistema que usa letras latinas para representar la pronunciación real del chino mandarín, incluyendo los tonos, que son esenciales para el significado.</p>
-            <p>Para los estudiantes hispanohablantes, aprender pinyin primero es fundamental porque no usamos caracteres chinos, el mandarín tiene sonidos que no existen en español y además es un idioma tonal.</p>
-            <p>Si un estudiante empieza chino sin dominar pinyin, normalmente aprende a pronunciar mal, se confunde con los tonos y desarrolla errores difíciles de corregir más adelante. Por eso, el pinyin es la base de una buena pronunciación desde el inicio.</p>
-        </div>
-
-        <div class="info-card">
-            <h3>¿Para qué sirve la tabla de pinyin?</h3>
-            <p>La tabla de pinyin muestra todos los pinyin que realmente existen en el chino mandarín.</p>
-            <p>Esto significa que no todas las combinaciones de letras son válidas en chino, aunque parezcan posibles para un hispanohablante.</p>
-            <p>Gracias a la tabla, el estudiante puede verificar si un pinyin existe o no existe en el chino mandarín y evitar inventar sonidos que no se usan en el idioma.</p>
-        </div>
-
-        
-<div style="display: flex; justify-content: center; align-items: center; background-color: #fdfdfd;border-radius: 10px;border-left: 5px solid #2e79ce;">
+        <div style="display: flex; justify-content: center; align-items: center; background-color: #f8faf8;border-radius: 10px;border-left: 5px solid #2e79ce;">
     <video 
         id="maumau-video"
         width="100%" 
@@ -1996,7 +1981,7 @@ header {
         playsinline
         preload="metadata"
         style="display: block; width: 50%;">
-        <source src="https://mandaringoo.github.io/MandarinAudio/maumau.mp4" type="video/mp4">
+        <source src="https://mandaringoo.github.io/MandarinAudio/maumau1.mp4" type="video/mp4">
         Tu navegador no soporta la reproducción de videos.
     </video>
 </div>
@@ -2030,6 +2015,22 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+        <div class="info-card">
+            <h3>¿Qué es el pinyin y por qué es tan importante aprenderlo primero?</h3>
+            <p>El pinyin es el sistema que usa letras latinas para representar la pronunciación real del chino mandarín, incluyendo los tonos, que son esenciales para el significado.</p>
+            <p>Para los estudiantes hispanohablantes, aprender pinyin primero es fundamental porque no usamos caracteres chinos, el mandarín tiene sonidos que no existen en español y además es un idioma tonal.</p>
+            <p>Si un estudiante empieza chino sin dominar pinyin, normalmente aprende a pronunciar mal, se confunde con los tonos y desarrolla errores difíciles de corregir más adelante. Por eso, el pinyin es la base de una buena pronunciación desde el inicio.</p>
+        </div>
+
+        <div class="info-card">
+            <h3>¿Para qué sirve la tabla de pinyin?</h3>
+            <p>La tabla de pinyin muestra todos los pinyin que realmente existen en el chino mandarín.</p>
+            <p>Esto significa que no todas las combinaciones de letras son válidas en chino, aunque parezcan posibles para un hispanohablante.</p>
+            <p>Gracias a la tabla, el estudiante puede verificar si un pinyin existe o no existe en el chino mandarín y evitar inventar sonidos que no se usan en el idioma.</p>
+        </div>
+
+        
+
         <div class="info-card">
             <h3>¿Cuál es el objetivo de la tabla de pinyin?</h3>
             <p>El objetivo principal de la tabla de pinyin es:</p>
