nuevo fondo color tabla

--- a/pinyin.html
+++ b/pinyin.html
@@ -71,7 +71,7 @@ letter-spacing: 1px; /* Espaciado extra para mayor sofisticación */
 
         #chart-container {
             overflow-x: auto;
-            background: white;
+            background: var(--color-bg);
             padding: 0;
         }
 
