--- a/pinyin.html
+++ b/pinyin.html
@@ -1335,7 +1335,7 @@ header {
 
 .main-nav .nav-links a {
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
     font-size: 13px;
     text-transform: uppercase;
     letter-spacing: 2px;
